# tiktok-uploader

./: pyproject.toml
.github/workflows/: publish.yml
src/tiktok_uploader/: __init__.py  auth.py  cli.py  uploader.py
tests/: conftest.py  test_auth.py  test_cli.py  test_exceptions.py  test_uploader.py
ts/: README.md  package.json
ts/src/: auth.ts  cli.ts  errors.ts  index.ts  types.ts  uploader.ts
